# Trinity-AE

./: .gitignore  Cargo.toml  README.md  results.txt  run.sh  setup.sh
backend/: README.md  baselines.py  evaluate_figure56.sh  evaluate_flashtensor.sh  format.py  format_brackets.py  model_configs.json  requirements.txt  run_all.sh  run_eval.py  run_figure5.py  run_figure56.py  run_figure67.py
backend/codegen/: AstNode.py  IrParser.py  NodeType.py  TritonGen.py  __init__.py  convert_module.py
backend/evaluation/: rmsnorm.json
backend/flashtensor/: h100_kf.py  h100_prenorm.py  h100_qknorm.py  h100_roco.py  (+1 more)
backend/mirage_eval/: .gitignore  .gitmodules  AGENT.md  build  pyproject.toml
backend/mirage_eval/benchmark/mirage/: keyformer.py  prenorm.py  qknorm.py  roco.py  swiglu.py  vanilla.py
backend/mirage_eval/ir/: keyformer.md  keyformer_with_prenorm.md  prenorm.md  qknorm.md  qknorm_wo_prenorm.md  roco.md  roco_with_prenorm.md  swiglu.md  vanilla.md
backend/mirage_eval/src/mirage/: pyproject.toml
backend/mirage_eval/src/mirage/benchmark/: multi_head_attention.py
backend/mirage_eval/src/mirage/cmake/: cuda.cmake
backend/mirage_eval/src/mirage/python/mirage/: kernel.py
backend/mirage_eval/src/mirage/src/search/: config.cc
backend/mirage_eval/test/: cuda_graph.py
benchmark/: RoCo.txt  RoCo_prenorm.txt  attacc.txt  dummy.txt  falcon7b.txt  falcon7b_hacked.txt  keyformer.txt  keyformer_prenorm.txt  llama3_8b.txt  llama3_8b_gqa.txt  llama7b.txt  prenorm.txt  qknorm.txt  qknorm_prenorm.txt  vanilla.txt  whole_vanilla.txt
egg/: Cargo.toml  egraph.dot  results.csv  results_tsv.csv  util.py
frontend/: .gitignore  README.md  cli.py  environment.yml  run_all.sh
optimizer/: Cargo.toml  README.md  run_all.sh
scripts/: DecAttn.py  FFN.py  README.md  Roco.py  Roco_with_stats.py  ffn.py  keyformer.py  prenorm.py  qknorm.py  roco.py  setup.sh  vanilla.py
src/: analysis.rs  applier.rs  cost.rs  dependency.rs  egraph_io.rs  extract.rs  extract_with_cost.rs  language.rs  lib.rs  optimization.rs  postprocess.rs  rules.rs  shape.rs  utils.rs  visualizer.rs
tests/: basic.rs  basic_with_shape.rs  benchmark.rs  falcon_7b.rs  gqa_vanilla.rs  integration.rs  keyformer.rs  keyformer_prenorm.rs  llama3_405b.rs  llama3_70b.rs  llama3_8b.rs  llama_7b.rs  misc.rs  prenorm.rs  qknorm.rs  qknorm_prenorm.rs  roco.rs  roco_prenorm.rs  saturate.rs  shape_test.rs  vanilla_attention.rs  whole.rs
trinity/: __init__.py  artifacts.py  config.py  pipeline.py  runtime.py  workspace.py
(+222 files in other folders)
