[package]
name = "TileIR"
version = "0.1.0"
edition = "2018"
authors = ["Jaehyeong Park <jaehyeong.park99@gmail.com>"]
description = "Research project using e-graphs for tensor program optimization at tile level"
license = "MIT"


[lib]
name = "TileIR"
path = "src/lib.rs"

[dependencies]
# Local egg library
egg = { path = "/home/jhpark676/Project/TileIR/egg" }

env_logger = {version = "0.9.0", default-features = false}
hashbrown = "0.15.2"
indexmap = "2.7.0"
log = "0.4.17"
num-bigint = "0.4"
num-traits = "0.2"
quanta = "0.12"
rustc-hash = "2.0.0"
smallvec = {version = "1.8.0", features = ["union", "const_generics"]}
symbol_table = {version = "0.4.0", features = ["global"]}
symbolic_expressions = "5.0.3"
thiserror = "1.0.31"
z3 = "0.12.1"
rayon = "1.7"
serde_json = "1.0"
json = "0.12"

# for the lp feature
coin_cbc = {version = "0.1.6", optional = true}

# for the serde-1 feature
serde = {version = "1.0.137", features = ["derive"], optional = true}
vectorize = {version = "0.2.0", optional = true}
bincode = {version = "1.3", optional = true}

# for the reports feature
saturating = "0.1.0"


[dev-dependencies]
ordered-float = "3.0.0"

[features]
# forces the use of indexmaps over hashmaps
deterministic = []
lp = ["coin_cbc"]
serde-1 = [
  "serde",
  "indexmap/serde",
  "hashbrown/serde",
  "symbol_table/serde",
  "vectorize",
  "bincode",
]
wasm-bindgen = []

# private features for testing
test-explanations = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]